# mneme

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: index.html  package.json  tsconfig.tsbuildinfo
apps/web/src/: Mneme.tsx  constants.ts  main.tsx
apps/web/src/components/: CodeBlock.tsx  SectionHeader.tsx  Tag.tsx
apps/web/src/data/: flow.ts  graph.ts  hld.ts  lld.ts  memory.ts  secrets.ts  vault.ts
apps/web/src/tabs/: FlowTab.tsx  GraphTab.tsx  HldTab.tsx  LldTab.tsx  MemoryTab.tsx  NameTab.tsx  SecretsTab.tsx  ServicesTab.tsx  VaultTab.tsx
docs/ADRs/: ADR-001-polyglot-storage.md  ADR-002-zero-knowledge-vault.md  ADR-003-self-building-graph.md
infra/fly/: agent.toml  tokenizer.toml
infra/k8s/charts/: gateway-values.yaml
infra/terraform/: main.tf  variables.tf
libs/mneme-proto/proto/: agent.proto  tokenizer.proto
libs/mneme-test/: pyproject.toml
libs/mneme-test/mneme_test/: __init__.py
libs/mneme-types/: pyproject.toml
libs/mneme-types/mneme_types/: __init__.py  core.py
services/agent/: pyproject.toml
services/agent/mneme/: __init__.py
services/agent/mneme/core/: __init__.py  brain.py
services/agent/mneme/llm/: __init__.py  client.py
services/agent/mneme/memory/: __init__.py  episodic.py  procedural.py  prospective.py  relational.py  router.py  semantic.py  sensory.py  working.py
services/agent/mneme/roles/: __init__.py  registry.py
services/agent/mneme/tools/: __init__.py  executor.py
services/agent/mneme/vault/: __init__.py  document_vault.py  secrets_vault.py
services/agent/mneme/workers/: __init__.py  graph_updater.py
services/doc-processor/: pyproject.toml
services/doc-processor/mneme/: __init__.py
services/edge/: package.json  wrangler.toml
services/edge/src/: index.ts
services/gateway/: go.mod
services/gateway/cmd/gateway/: main.go
services/graph-worker/: pyproject.toml
services/graph-worker/mneme/: __init__.py
services/indexer/: pyproject.toml
services/indexer/mneme/: __init__.py
services/notifier/: go.mod
services/notifier/cmd/notifier/: main.go
services/scheduler/: go.mod
services/scheduler/cmd/scheduler/: main.go
services/tokenizer/: Cargo.toml
services/tokenizer/src/: main.rs
services/vault-agent/: go.mod
services/vault-agent/cmd/vault-agent/: main.go
