[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme-test"
version = "0.1.0"
description = "MNEME integration test harness"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mneme_test"]
