[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme-types"
version = "0.1.0"
description = "Shared Python types for MNEME services"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["mneme_types"]
