[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme-agent"
version = "0.1.0"
description = "MNEME AgentBrain — 8-layer memory coordination + tool execution"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pinecone-client>=5.0.0",
    "neo4j>=5.26.0",
    "confluent-kafka>=2.6.0",
    "boto3>=1.35.0",
    "cryptography>=43.0.0",
    "hvac>=2.3.0",
    "voyageai>=0.3.2",
    "langfuse>=2.54.0",
    "pydantic>=2.9.0",
    "opentelemetry-sdk>=1.28.0",
    "sentry-sdk>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mneme"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
