[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme-doc-processor"
version = "0.1.0"
description = "MNEME document processor — PDF/image chunking, OCR (Modal GPU)"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6.0",
    "pypdf>=5.0.0",
    "pillow>=11.0.0",
    "modal>=0.66.0",
    "pydantic>=2.9.0",
    "boto3>=1.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mneme"]
