[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme-graph-worker"
version = "0.1.0"
description = "MNEME graph inference worker — Kafka consumer, Neo4j updater"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.6.0",
    "neo4j>=5.26.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mneme"]
